--- a/CadastroUsuario.App/CadastroUsuario.App/CadastroUsuario.App/Views/CadastrarUsuario.xaml
+++ b/CadastroUsuario.App/CadastroUsuario.App/CadastroUsuario.App/Views/CadastrarUsuario.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CadastroUsuario.App.CadastrarUsuario"
-             Visual="Material">
+             Visual="Material"
+             BackgroundColor="#303030">
 
     <ContentPage.Content ContentPage.HasNavigationBar="false">
         
@@ -22,7 +23,6 @@
                 <Entry x:Name="Idade" Placeholder="Idade" BackgroundColor="#37474f" MaxLength="3" PlaceholderColor="DarkGray" TextColor="AliceBlue"/>
                 <StackLayout Margin="0,0,0,0" Orientation="Horizontal">
                     <Button Text="Cadastrar usuário" HorizontalOptions="CenterAndExpand" Margin="0" Clicked="CadastrarUsuarioAsync" BackgroundColor="#34515f"/>
-                    <Button Text="Voltar" HorizontalOptions="CenterAndExpand" Margin="0" Clicked="Voltar" BackgroundColor="#34515f"/>
 
             </StackLayout>
         </StackLayout>
