--- a/cadastrarusuario - php/style.css
+++ b/cadastrarusuario - php/style.css
@@ -12,6 +12,33 @@ body {
   top: 5px;
 }
 
+#botoes-formulario
+{
+  padding-top: 50px;
+}
+
+#row
+{
+  justify-content: center;
+  width: 100%;
+  height: 0.2%;
+}
+#row:hover {
+  background-color: #a7dbf5;
+  width: 100.2%;
+  height: 0.3%;
+  border-radius: 15px;
+ -moz-box-shadow:    0 0 50px #34515f;
+ -webkit-box-shadow: 0 0 50px #34515f;
+ box-shadow:         0 0 50px #34515f;
+}
+
+#titulo
+{
+  padding-bottom: 50px;
+  padding-top: 25px;
+
+}
 #container {
   width: 75%;
   margin: 0 auto;
@@ -21,6 +48,7 @@ body {
   margin-top: 20px;
   position:relative;
   text-align: center;
+  border-radius: 10px;
 }
 
 a {
@@ -38,40 +66,3 @@ ul {
   margin-right:20px;
 }
 
-
-#usuario {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  opacity:1;
-}
-
-#usuario:hover {
-  background-color: #4f89a7;
-  border-radius: 10px;
-  opacity:0.5;
-
-}
-
-#usuario a:hover{
-  transform: scale(0.10);
-}
-
-.botao {
-  padding: 5px;
-  background-color: rgba(26, 78, 126, 0.438);
-  color: black;
-  font-weight: bold;
-  border: solid 1px rgb(4, 58, 109);
-  border-radius: 5px;
-}
-
-.botao:hover{
-  transform: scale(0.95);
-}
-
-.botao-block {
-  display: block;
-  width: max-content;
-}
